--- a/public/files/css/freelancer.css
+++ b/public/files/css/freelancer.css
@@ -57,6 +57,10 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+div.gallery > div:first-child {
+  display: contents;
+}
+
 article,
 aside,
 figcaption,
