--- a/public/files/css/masonry.css
+++ b/public/files/css/masonry.css
@@ -8,7 +8,16 @@ li a {
   color: black;
   /* transition: all 0.25s ease-in-out; */
 }
-
+/* Add From me To Fix the size of image */
+div#modal-btn {
+  width: 200px !important;
+}
+.gallery-wrapper
+  .gallery
+  .lazy-load-image-background.blur.lazy-load-image-loaded
+  > img {
+  width: 100%;
+}
 #fh5co-logo {
   text-align: center;
 }
